--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,12 @@ charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
 comm==0.2.2
+contourpy==1.3.3
 cookiecutter==2.6.0
 coverage==7.8.0
 crispy-bootstrap5==2025.4
 cryptography==45.0.3
+cycler==0.12.1
 debugpy==1.8.14
 decorator==5.2.1
 Django==5.2
@@ -32,8 +34,10 @@ django-tables2==2.7.5
 django-tailwind==4.1.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+environ==1.0
 et_xmlfile==2.0.0
 executing==2.2.0
+fonttools==4.59.0
 google-ai-generativelanguage==0.6.15
 google-api-core==2.25.1
 google-api-python-client==2.176.0
@@ -53,11 +57,14 @@ jedi==0.19.2
 Jinja2==3.1.6
 jupyter_client==8.6.3
 jupyter_core==5.7.2
+kiwisolver==1.4.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+matplotlib==3.10.3
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 nest-asyncio==1.6.0
+numpy==2.3.2
 openpyxl==3.1.5
 packaging==25.0
 parso==0.8.4
