--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ cryptography==45.0.3
 cycler==0.12.1
 debugpy==1.8.14
 decorator==5.2.1
+dj-database-url==3.0.1
 Django==5.2
 django-appconf==1.1.0
 django-autoslug==1.9.9
